# chess-bot

./: .gitignore  .travis.yml  CMakeLists.txt
src/chess/: board.cpp  board.hpp  minmax.hpp  piece_board.cpp  piece_board.hpp  vector_2.hpp
src/stresstest/: stresstest.hpp
